Parameterized Class Instances fields, comboBoxFields, tableHeadings, columnNamesHashMap, columnClassHashMap, columnTypeHashMap, columnSizeHashMap, & preferredColumnSizeHashMap in Order to Bring Code Into Compliance With Java 5.0 API. Removed Casts Associated With These Instances That Were Not Needed and Insured Proper Parameters Were Loaded/Retrieved.